# elixir-forge

./: .gitignore  CONTRIBUTING.md  README.md  ZENOHD_SERVICE_SETUP.md  ZENOH_REST_PLUGIN_GUIDE.md  boot_forge.sh  build_release.bat  mix.exs  test_e2e.sh  zenohd.service
apps/forge-client/: forge_client  mix.exs
apps/livebook_executor/: README.md  livebook_executor  mix.exs
apps_tools/tris_to_quads_converter/: tris_to_quads_converter.exs
apps_tools/zimage_generation/: mix.exs  zimage_generation.exs
apps_tools_development/kvoicewalk_generation/: kvoicewalk_generation.exs
apps_tools_development/tri_to_quad/: tri_to_quad.exs
apps_tools_development/unirig_generation/: unirig_generation.exs
config/: config.exs  runtime.exs
docs/: api.md  database_latency_proposal.md  index.md  setup.md  third-party-tools.md  tools_research.md  user-guide.md
docs/proposals/: index.md  (+4 more)
elixir/: qwen3vl_inference.livemd  qwen_image_edit_plus.livemd  service_dashboard.livemd  shared_utils.exs  tris_to_quads_livebook.livemd  unirig_generation.livemd  zimage_generation.exs  zimage_generation.livemd
forge-client/: mix.exs
python/: inference_service.py
ra_mailbox/: mix.exs
rel/: vm.args
zenoh-router/: README.md
zimage/: README.md  inference_service.py  main.py  mix.exs  pyproject.toml
zimage-client/: README.md  mix.exs  zimage_client
zimage/config/: config.exs
zimage/flatbuffers/: InferenceRequest.py  InferenceResponse.py  inference_request.fbs  inference_response.fbs
zimage/lib/: application.ex  zenoh_service.ex  zimage.ex
zimage/test/: zimage_test.exs
(+53 files in other folders)
